# depcache

./: .gitignore  README.md  depcache.cabal
src/: DepProcessors.hs  FileFinder.hs  Main.hs  Program.hs
src-cmdline/: Main.hs
src/DepProcessors/: Bower.hs  Composer.hs  FileHelpers.hs  Npm.hs  ProcessorHelpers.hs
src/DepProcessors/Data/: Result.hs
src/FileFinder/: Git.hs
