name:                depcache
version:             0.1.0.0
synopsis:            A CLI tool for downloading bower, composer, npm etc. deps
description:         Please see README.md
homepage:            http://github.com/splondike/depcache#readme
license:             GPL3
license-file:        LICENSE
author:              Stefan Schneider-Kennedy
maintainer:          code@stefansk.name
copyright:           2015 Stefan Schneider-Kennedy
category:            Utils
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       DepProcessors,
                       FileFinder,
                       Program
  other-modules:
                       DepProcessors.Bower,
                       DepProcessors.Composer,
                       DepProcessors.Npm,
                       DepProcessors.ProcessorHelpers,
                       DepProcessors.Data.Result,
                       FileFinder.Git
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       process,
                       unix,
                       regex-tdfa,
                       array

executable depcache
  hs-source-dirs:      src-cmdline
  ghc-options:         -threaded
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       depcache,
                       directory
